getTupleSpacesState Synchronized + ShutDown in FrontEnd